# openlifter

./: .env  .eslintrc  .flowconfig  .gitignore  .gitlab-ci.yml  .prettierrc  AUTHORS.md  CNAME  Makefile  Openlifter-openapi.yaml  README.md  asset-manifest.json  cypress.json  electron.js  index.html  manifest.json  package-lock.json  package.json  service-worker.js  service-worker.js.map  test.py  tsconfig.json
about/: index.html
api/: Dockerfile  README.md  requirements.txt  setup.py  tox.ini
api/swagger_server/: __main__.py  config.py  encoder.py  exceptions.py
cypress/integration/: debug_page_spec.ts  meet_setup_page_spec.ts
debug/: index.html
docker/: docker-compose.yml
docker/docker-entrypoint-initdb.d/: mongo-init.js
flight-order/: index.html
lifting/: index.html
meet-setup/: index.html
public/: electron.js  index.html  service-worker.js
public/records/: index.html
registration/: index.html
releases/1.4.0/: asset-manifest.json  index.html  service-worker.js
results/: index.html
server/: Cargo.toml
server/src/: lib.rs  main.rs  openlifter.rs  sample.openlifter
src/: App.css  App.js  App.test.js  App.test.tsx  App.tsx  index.css  index.js  index.tsx  serviceWorker.js  store.js  store.ts  translationRunner.js  versions.js  versions.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/actions/: globalActions.js  globalActions.ts  (+14 more)
streaming/: index.html  obs_lifter_overlay.html  obs_lifter_overlay_v1.html  obs_lifter_overlay_v2.css  obs_lifter_overlay_v2.html  test.html
website/: Makefile  README.md  config.toml
weigh-ins/: index.html
(+425 files in other folders)
