[package]
name = "openlifter-server"
version = "0.1.0"
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
opltypes = "0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
mimalloc = { version = "0.1", default-features = false }
