[package]
name = "openlifter-tauri"
version = "0.1.0"
description = "OpenLifter on the Tauri runtime"
authors = ["OpenPowerlifting Team"]
publish = false
license = "AGPLv3+"
repository = "https://gitlab.com/openpowerlifting/openlifter/"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.1", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
